Fixed minor issues with single page displaying text clipping with some interface at 820 and 810px width

--- a/src/style/media.scss
+++ b/src/style/media.scss
@@ -313,7 +313,7 @@
         }
 
         &__diving-line{
-            width: 25.4rem;
+            width: 100%;
             right: 0;
         }
 
@@ -381,10 +381,10 @@
 
 @media (max-width: 810px) {
     .championSkins{
-        height: 29.8rem;
+        height: 29.5rem;
 
         &__slider-cover{
-            height: 29.9rem;
+            height: 29.5rem;
         }
 
         &__slider{
@@ -398,6 +398,10 @@
         &__slide{
             height: 8rem !important;
         }
+    }
+
+    .footer{
+        margin-top: 0rem;
     }
 }
 
@@ -503,7 +507,7 @@
         &__short-description{
             margin: 0 1rem 0 1rem;
             width: 100%;
-            height: 15vh;
+            height: 13vh;
             overflow: scroll;
         }
 
@@ -614,6 +618,10 @@
            height: 5.1rem !important;
            width: 30% !important;
         }
+    }
+
+    .footer{
+        margin-top: 0rem;
     }
 }
 
